--- a/style.css
+++ b/style.css
@@ -42,3 +42,10 @@ footer {
 hr {
   margin-bottom: 0px !important;
 }
+
+img.emoji {
+   height: 1em;
+   width: 1em;
+   margin: 0 .05em 0 .1em;
+   vertical-align: -0.1em;
+}
